deployment/ingest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingest
  namespace: data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingest
  template:
    metadata:
      labels:
        app: ingest
    spec:
      containers:
        - name: ingest
          image: undpgeohub.azurecr.io/geohub-data-pipeline:main
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
